[package]
name = "collection_macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
description = "General-purpose `seq![]` and `map! {}` collection macros"

[features]
mitsein = ["dep:mitsein"]
indexmap = ["dep:indexmap", "mitsein?/indexmap"]

[dependencies]
mitsein = { version = "0.7", optional = true }
indexmap = { version = "2.11", optional = true }
