[package]
name = "collection_macro"
version = "0.1.3"
edition = "2021"
rust-version = "1.60"
authors = ["Nik Revenco <pm@nikrev.com>"]
description = "General-purpose `seq![]` and `map! {}` collection macros"
repository = "https://github.com/nik-rev/seq-map"
license = "MIT OR Apache-2.0"
keywords = ["macros", "collection", "collection-macro", "non-empty", "mitsein"]
categories = ["no-std", "no-std::no-alloc", "development-tools", "development-tools::procedural-macro-helpers", "rust-patterns"]

[dev-dependencies]
mitsein = "0.7"
